# src/routes/Order.Route.js
@@ -1,0 +1,13 @@
+const {
+  createOrder,
+  getOrderHistory,
+} = require("../controllers/OrderController");
+const { verifyToken } = require("../middlewares/Auth");
+const express = require("express");
+
+const router = express();
+
+router.post("/create-order", verifyToken, createOrder);
+router.post("/order-history", verifyToken, getOrderHistory);
+
+module.exports = router;
